--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ torchaudio = "^2.4.1"
 torchmetrics = "^1.4.2"
 torchvision = "^0.19.1"
 matplotlib = "^3.9.2"
+tqdm = "^4.66.5"
 
 
 [build-system]
